<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <TextView
            android:id="@+id/txtHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/enableBE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/use_bluetooth" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="fill_vertical"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txtHeader3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usb"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/enableUSB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/use_usb" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="fill_vertical"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txtHeader4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tcp_ip"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/enableTCPIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/use_tcp_ip" />

        <TextView
            android:id="@+id/txtPrinterIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_ip_address"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/printerIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/printer_ip_address"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />


        <TextView
            android:id="@+id/txtPrinterPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_port"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/printerPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/printer_port"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtPrinterTimeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_timeout"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/printerTimeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/printer_timeout"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="fill_vertical"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txtHeader5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esc_pos"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/enableAutoCut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/auto_cut_paper" />

        <Switch
            android:id="@+id/enableCashDrawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/auto_open_cash_drawer" />

        <TextView
            android:id="@+id/txtNumberOfCopies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_of_copies_to_print"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/numberOfCopiesToPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_copies_to_print"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtPrinterDPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_dpi"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/printerDpi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/printer_dpi"
            android:inputType="number"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtPrinterWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_width"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/printerWidthMM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paper_width"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtPrinterNbrCharactersPerLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_char_per_line"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/printerNbrCharactersPerLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_char_per_line"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="fill_vertical"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txtHeader1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_server"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/printServerDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_start_server_to_open_print_api_at_port_5000"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnServerStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_server" />

        <Button
            android:id="@+id/btnTestPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_printer" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
</ScrollView>